# llm-reasoning-framework

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  conftest.py  debug_output.txt  debug_output2.txt  debug_output3.txt  debug_reasoning.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test_my_problem.py  test_regex.py  update_changelog.py
conf/: problem_10.txt  problem_3.txt  problem_5.txt
conf/example_user_prompts/: problem1.txt  problem2.txt
conf/prompts/: aot_final_answer.txt  aot_intro.txt  (+9 more)
data/: audit_log.sqlite  migration_status.json
docs/: PROJECT_STRUCTURE.md  STRUCTURE.md  l2t_paper.md  paper_text.txt
hard_reasoning_problems/: problem_1.txt  problem_10_solution.txt  problem_1_solution.txt  problem_2.txt  problem_4_solution.txt  problem_6.txt  problem_8_solution.txt  problem_9_solution.txt
src/: aot_dataclasses.py  aot_enums.py  aot_orchestrator.py  aot_processor.py  cli_runner.py  communication_logger.py  complexity_assessor.py  heuristic_detector.py  l2t_dataclasses.py  l2t_enums.py  l2t_orchestrator.py  l2t_processor.py  l2t_prompt_generator.py  l2t_response_parser.py  llm_client.py  llm_config.py  prompt_generator.py  reasoning_process.py  response_parser.py
tests/: README.md  __init__.py  check_env_test.py  test_aot_orchestrator.py  test_api_examples.py  test_cli_parameters.py  test_heuristic_detector.py  test_l2t_orchestrator.py  test_l2t_processor.py  test_l2t_prompt_generator.py  test_l2t_response_parser.py  test_l2t_result_mutability.py  test_llm_accounting.py  test_llm_config.py  test_output_capture.py
(+122 files in other folders)
